--- a/src/sass/blocks/more.scss
+++ b/src/sass/blocks/more.scss
@@ -46,6 +46,10 @@
   display: flex;
   flex-direction: column;
 
+  @media (min-width: $desktops) {
+    margin-top: -15px;
+  }
+
   @media (max-width: $tablets-max) {
     width: 100%;
     padding-right: 0;
