--- a/src/sass/blocks/exclusive.scss
+++ b/src/sass/blocks/exclusive.scss
@@ -1,5 +1,5 @@
 .exclusive {
-  padding-top: 174px;
+  padding-top: 170px;
   padding-bottom: 201px;
 
   @media (max-width: 1299px) {
@@ -85,6 +85,31 @@
 
   .swiper-slide {
     width: 100%!important;
+  }
+
+  .swiper-button-prev,
+  .swiper-button-next {
+    width: 50px;
+    height: 50px;
+    background: #292A2A;
+    border-radius: 50%;
+
+    &:after {
+      display: none;
+    }
+  }
+
+  .swiper-button-prev {
+    left: 16px;
+    right: auto;
+    top: 59%;
+  }
+
+  .swiper-button-next {
+    transform: rotate(180deg);
+    right: 16px;
+    left: auto;
+    top: 59%;
   }
 }
 
