--- a/src/sass/blocks/footer.scss
+++ b/src/sass/blocks/footer.scss
@@ -99,6 +99,10 @@
     @media (max-width: $tablets-max) {
       margin-right: 2%;
     }
+
+    @media (max-width: $mobiles-max) {
+      margin-bottom: 10px;
+    }
   }
 
   &--agreements {
