переделаывает без vue

--- a/src/sass/blocks/additional.scss
+++ b/src/sass/blocks/additional.scss
@@ -1,12 +1,12 @@
 .additional {
-    margin-top: 120px;
+    margin-top: 125px;
     @media (max-width: $tablets-max) {
         margin-top: 40px;
     }
 }
 
 .additional__items {
-    margin-top: 45px;
+    margin-top: 40px;
 }
 
 .additional__item {
@@ -21,7 +21,7 @@
     font-size: 18px;
     line-height: 25px;
     color: #333333;
-    margin: 25px 0 48px;
+    margin: 30px 0 48px;
 }
 
 .additional__link {
@@ -43,6 +43,10 @@
     @media (max-width: $mobiles-max) {
         height: 250px;
     }
+
+    @media (max-width: 500px) {
+        height: 200px;
+    }
     img {
         object-fit: cover;
         width: 100%;
@@ -52,16 +56,18 @@
 
 .additional__wrapper {
     position: relative;
-    .swiper-button-prev {
+    .button-prev {
         display: none;
     }
-    .swiper-button-next {
+    .button-next {
         width: 50px;
         height: 50px;
         background-color: #D6D6D6;
         border-radius: 50%;
-        top: 33%;
+        top: 28%;
         right: -26px;
+        position: absolute;
+        z-index: 2;
         &:after {
             display: none;
         }
