--- a/#src/scss/forms.scss
+++ b/#src/scss/forms.scss
@@ -59,10 +59,10 @@
 		flex-direction: row-reverse;
 		span {
 			height: 1em;
-			overflow: hidden;
-			display: -webkit-box;
-			-webkit-line-clamp: 1;
-			-webkit-box-orient: vertical;
+			// overflow: hidden;
+			// display: -webkit-box;
+			// -webkit-line-clamp: 1;
+			// -webkit-box-orient: vertical;
 		}
 		&:before {
 			content: "";
