--- a/#src/scss/ui.scss
+++ b/#src/scss/ui.scss
@@ -179,7 +179,7 @@ body.ie {
 	background: url("../img/icons/loading.gif") center / 50px no-repeat;
 }
 //====================================================================================================
-._swiper {
+.swiper {
 	overflow: hidden;
 	//.swiper-wrapper
 	> div {
@@ -195,62 +195,62 @@ body.ie {
 		}
 	}
 }
-.swiper-container-initialized {
-	.swiper-slide {
-		flex-shrink: 0;
-		// transition-property: transform;
-	}
-}
-.swiper-container-android {
-	.swiper-slide,
-	.swiper-wrapper {
-		transform: translate3d(0px, 0, 0);
-	}
-}
-.swiper-button-lock {
-	display: none !important;
-}
-//====================================================================================================
-.slick-slider {
-	position: relative;
-	.slick-track,
-	.slick-list {
-		-webkit-transform: translate3d(0, 0, 0);
-		-moz-transform: translate3d(0, 0, 0);
-		-ms-transform: translate3d(0, 0, 0);
-		-o-transform: translate3d(0, 0, 0);
-		transform: translate3d(0, 0, 0);
-	}
-	.slick-list {
-		position: relative;
-		overflow: hidden;
-		width: 100%;
-	}
-	.slick-track {
-		position: relative;
-		width: 100%;
-		display: flex;
-	}
-	.slick-slide {
-		position: relative;
-	}
-	.slick-arrow {
-		&.slick-prev {
-		}
-		&.slick-next {
-		}
-	}
-	.slick-dots {
-		li {
-			button {
-			}
-			&.slick-active {
-				button {
-				}
-			}
-		}
-	}
-}
+// .swiper-container-initialized {
+// 	.swiper-slide {
+// 		flex-shrink: 0;
+// 		// transition-property: transform;
+// 	}
+// }
+// .swiper-container-android {
+// 	.swiper-slide,
+// 	.swiper-wrapper {
+// 		transform: translate3d(0px, 0, 0);
+// 	}
+// }
+// .swiper-button-lock {
+// 	display: none !important;
+// }
+// //====================================================================================================
+// .slick-slider {
+// 	position: relative;
+// 	.slick-track,
+// 	.slick-list {
+// 		-webkit-transform: translate3d(0, 0, 0);
+// 		-moz-transform: translate3d(0, 0, 0);
+// 		-ms-transform: translate3d(0, 0, 0);
+// 		-o-transform: translate3d(0, 0, 0);
+// 		transform: translate3d(0, 0, 0);
+// 	}
+// 	.slick-list {
+// 		position: relative;
+// 		overflow: hidden;
+// 		width: 100%;
+// 	}
+// 	.slick-track {
+// 		position: relative;
+// 		width: 100%;
+// 		display: flex;
+// 	}
+// 	.slick-slide {
+// 		position: relative;
+// 	}
+// 	.slick-arrow {
+// 		&.slick-prev {
+// 		}
+// 		&.slick-next {
+// 		}
+// 	}
+// 	.slick-dots {
+// 		li {
+// 			button {
+// 			}
+// 			&.slick-active {
+// 				button {
+// 				}
+// 			}
+// 		}
+// 	}
+// }
 //=====================================================================================================================
 .tab__item {
 	display: none;
